--- a/webview-ui/src/app/todo/todo-item/todo-item.component.scss
+++ b/webview-ui/src/app/todo/todo-item/todo-item.component.scss
@@ -95,15 +95,23 @@
 				display: flex;
 				flex: 0 1 500px;
 				justify-content: flex-end;
+				gap: 1rem;
 			}
 
 			vscode-button {
-				margin-left: 1rem;
 				flex: 1 1 auto;
 			}
 			.labels {
 				display: block;
-				flex-shrink: 0;
+				flex: 1 1 200px;
+				max-width: 50%;
+				overflow-x: clip;
+				margin-right: 1rem;
+			}
+			@media (max-width: 650px) {
+				.labels {
+					display: none;
+				}
 			}
 		}
 	}
